Fri Dec 07 14:48:01 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.c, foobar-widget.c: add an extra type
	  for autohide panels so that windowmanagers can behave more nicely.

2001-12-07  Alexander Larsson  <alla@lysator.liu.se>

	* launcher.c (launcher_file_name):
	mkdir launcer directory if it doesn't exist.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* panel-widget.c:
	Fixed off-by-one pixel error with expand_major that made broke
	switching between horz/vertical with a tasklist at the end.

2001-12-06  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (session_read_global_config): fix sillys.

2001-12-06  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (session_read_global_config): cast to
	GConfEntry. Weird - gconf does this itself, but it seems
	to break some things.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* launcher.c (launcher_save):
	launcher_get_unique_file renamed to launcher_get_unique_uri,
	now returns file: uri.

Wed Dec 05 19:04:58 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.[ch], foobar-widget.c:  Set the WM_STRUT
	  hint for panels

2001-12-05  Alex Larsson  <alexl@redhat.com>

	* launcher.c (create_launcher):
	Don't only load from file: uri's. This makes it at least do something
	for program: uris.

2001-12-05  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c: Fix segfault George.
	* session.c: Start using GConfChangeSet. Dunno
	if this is really necessary or not.

2001-12-05  Kjartan Maraas  <kmaraas@gnome.org>

	* foobar-widget.c: Make it use bugzilla.
	* help/no/panel.sgml: Update.
		
Wed Dec 05 13:36:43 2001  George Lebl <jirka@5z.com>

	* aligned-widget.[ch], basep-widget.[ch],
	  border-widget.[ch], drawer-widget.[ch],
	  edge-widget.[ch], floating-widget.[ch],
	  drawer.c, menu.c, panel_config.[ch],
	  session.c, sliding-widget.[ch]:  Remove the avoid
	  on maximize configuration crack.  It was just pure
	  crack.  With WM_STRUT we should be mostly sane