@@ -1,3 +1,7 @@
+2001-12-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* launcher.c: (setup_button): Make adding launchers not crash.
+
 Fri Dec 07 14:48:01 2001  George Lebl <jirka@5z.com>
 
 	* xstuff.[ch], basep-widget.c, foobar-widget.c: add an extra type
